[package]
name = "boundry_dynamics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", features = ["mp3"] }
bevy_ecs_tilemap = { version = "0.11", features = ["atlas", "render"] }
bevy_xpbd_2d = { version = "0.2", features = ["simd"] }
rand = "0.8"